clamav-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: clamd-service
spec:
  selector:
    aikido: clamd
  ports:
    - protocol: "TCP"
      port: 3310
      targetPort: 3310
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: clamd
spec:
  selector:
    matchLabels:
      aikido: clamd
  template:
    metadata:
      labels:
        aikido: clamd
    spec:
      volumes:
        - name: host
          hostPath:
            path: /

        - name: clamdb
          emptyDir:

        - name: etc
          configMap:
            name: clamav

      containers:
        - name: clamd
          image: filefrog/clamav:latest
          imagePullPolicy: Always
          command:
            - /clamav
            - clamd

          readinessProbe:
            periodSeconds: 3
            tcpSocket:
              port: 3310

          volumeMounts:
            - name: etc
              mountPath: /etc/clamav
              readOnly: yes

            - name: host
              mountPath: /host
              readOnly: yes

            - name: clamdb
              mountPath: /var/lib/clamav
              readOnly: yes

        - name: freshclam
          image: filefrog/clamav:latest
          imagePullPolicy: Always
          command:
            - /clamav
            - freshclam

          volumeMounts:
            - name: etc
              mountPath: /etc/clamav
              readOnly: yes

            - name: clamdb
              mountPath: /var/lib/clamav
              readOnly: no
