gitlab-service-installation.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
spec:
  selector:
    app: gitlab-service
  ports:
  - protocol: "TCP"
    port: 8088
    targetPort: 8088

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-service
spec:
  selector:
    matchLabels:
      app: gitlab-service
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab-service
    spec:
      containers:
      - name: gitlab-service
        image: lucasdockerfontys/gitlab-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8088
